--- a/index.html
+++ b/index.html
@@ -22,8 +22,13 @@
     <section class="project-card">
       <h2>Sip & Go</h2>
       <div class="video-container">
-        <iframe src="https://www.youtube.com/embed/09SbuahvWyY"
-                frameborder="0" allowfullscreen></iframe>
+        <iframe 
+          src="https://www.youtube.com/embed/09SbuahvWyY" 
+          title="Sip & Go Demo" 
+          frameborder="0" 
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+          allowfullscreen>
+        </iframe>
       </div>
     </section>
 
